[package]
name = "aobscan-cli"
version = "1.0.0"
authors = ["sonodima"]
edition = "2021"

description = "AOBscan CLI is a command-line utility for multi-threaded AOB memory scanning"
readme = "README.md"
homepage = "https://github.com/sonodima/aobscan-cli"
repository = "https://github.com/sonodima/aobscan-cli"
license = "MIT"

keywords = ["memory", "aob", "signature", "pattern", "scan"]
categories = ["command-line-utilities", "algorithms"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
aobscan = "0.2.0"
